Put "what is CV" on about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 {% block body %}
     <div id="about">
 
-        <h2>Why should candidates share their CV?</h2>
+        <h2>Why are you collecting CVs?</h2>
 
         <p>Sending a CV is usually the very first step of a job application.
         </p>
@@ -25,7 +25,7 @@
         <p>To be helpful to voters, so they can choose the best candidate.
         </p>
 
-        <p>Or have a look at articles on the topic:
+        <p>These articles give further motivation:
         </p>
         
         <ul>
@@ -33,6 +33,10 @@
             <li><a href="http://news.bbc.co.uk/1/hi/uk_politics/8583859.stm">MP hopefuls urged to declare interests</a></li>
             <li><a href="https://www.gov.uk/advertise-job">Advertise a job with Universal Jobmatch</a></li>
         </ul>
+
+        <h2>What is a CV?</h2>
+
+        {% include 'this_is_a_cv.html' %}
 
         <h2>What's the long term aim?</h2>
 
