--- a/templates/upload_cv_confirmed.html
+++ b/templates/upload_cv_confirmed.html
@@ -15,22 +15,7 @@
           </a>
         </form>
 
-        <div class="row is_is_not">
-            <div class="col-xs-5">
-                <div class="top">This is a CV</div>
-                <img src="/static/this-is-cv.png">
-                <div class="bottom">
-                    List of jobs including dates and names of employers
-                </div>
-            </div>
-            <div class="col-xs-5">
-                <div class="top">Not a CV</div>
-                <img src="/static/not-cv.png">
-                <div class="bottom">
-                    List of jobs is in a block of text. No dates or employers given.
-                </div>
-            </div>
-        </div>
+        {% include 'this_is_a_cv.html' %}
 
     </div>
 {% endblock %}
