--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -56,6 +56,10 @@
              </span>
           </p>
 
+          <ul class="nav navbar-nav navbar-right">
+            <li> <a href="/about">About</a> </li>
+          </ul>
+
         </div>
       </div>
     </div>
