--- a/templates/email_candidates.html
+++ b/templates/email_candidates.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %} Email candidates {% endblock %}
 {% block body %}
-    <div id="upload_cv">
+    <div id="email_candidates">
 
         <h1>Ask candidates to share their CV</h1>
 
@@ -28,10 +28,17 @@
             </div>
 
             <div class="form-group">
+              <label for="subject" class="col-sm-2 control-label">Subject</label>
+              <div class="col-sm-10">
+                  <input id="subject" name="subject" value="{{subject}}" class="form-control">
+              </div>
+            </div>
+
+            <div class="form-group">
                 <label class="col-sm-2 control-label" for="message">Message</label>
                 <div class="col-sm-10">
-                    <p class="form-control-static">Dear {{ names_list }},</p>
-                    <textarea id="message" name="message" class="form-control" rows=12 autofocus>{{ message  }}</textarea>
+                    <p class="form-control-static dear-message">Dear {{ names_list }},</p>
+                    <textarea id="message" name="message" class="form-control" rows=12 autofocus>{{ message }}</textarea>
                     <p class="help-block visible-lg-block visible-md-block hidden-sm hidden-xs">
                         Want some ideas for your letter? See the top tips to the right.
                     </p>
@@ -60,11 +67,11 @@
 
     <h2>Writing an effective mail</h2>
 
-     <!-- <p>Think of an intriguing subject that will encourage them to open it: they're receiving hundreds of emails a day!  A question is good.</p> -->
-     <p>1. Introduce yourself, <strong>making it clear you're in their constituency</strong> (<em>{{constituency.name}}</em>).</p>
-     <p>2. Tell them you've been looking at candidate's CVs on Democracy Club. Tell them why you think it's important they upload theirs. </p>
+     <p>1. Think of an intriguing subject that will encourage them to open it, and make it clear you're local.</p>
+     <p>2. Introduce yourself, <strong>making it clear you're in their constituency</strong> (<em>{{constituency.name}}</em>).</p>
+     <p>3. Tell them you've been looking at candidate's CVs on Democracy Club. Tell them why you think it's important they upload theirs. </p>
      <!-- <p>Tell them that <strong></strong> candidates have answered it already, and that in <em>{{constituency.name}}</em> -->
-     <p>3. Finish by telling them there's a link at the bottom of the email to upload their CV, and say thank you! (we automatically add the link to your email after you press 'send')</p>
-     <p>4. <strong>Sign off with your address</strong>, so they can see you're really from their constituency.</p>
+     <p>4. Finish by telling them there's a link at the bottom of the email to upload their CV, and say thank you! (we automatically add the link to your email after you press 'send')</p>
+     <p>5. <strong>Sign off with your address</strong>, so they can see you're really from their constituency.</p>
 
 {% endblock %}
