Quite nice Tweet page

--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -59,15 +59,14 @@
                         <div class="candidate">
                             <span class="name">{{ candidate.name }}</span> &mdash; <span class="party">{{ candidate.party}}</span>
                             <a href="/upload_cv/{{ candidate.id }}" class="this_is_me">This is me</a>
-                            {% if candidate.twitter %}
-                                <a class="twitter-share-button" href="https://twitter.com/{{ candidate.twitter }}" data-text=". @{{ candidate.twitter }} I vote in your seat. I'd love to see your CV - could you share it here?" data-related="democlub" data-hashtags="ge2015" data-count="none" data-size="large" data-url="http://cv.democracyclub.org.uk">@{{ candidate.twitter }}</a>
-                            {% endif %}
                         </div>
                         {% endfor %}
                     </div>
 
                     <p>
                         <a href="/email_candidates" class="btn btn-lg btn-success">Email them all!</a>
+                        &nbsp;
+                        <a href="/tweet_candidates" class="btn btn-lg btn-info">Tweet them all!</a>
                     </p>
 
                 </div>
