--- a/static/style.css
+++ b/static/style.css
@@ -235,3 +235,9 @@ html,body        {height:100%;}
 .dear-message {
   margin-left: 15px;
 }
+
+/* /tweet_candidates */
+
+.done-button {
+  margin-top: 48px;
+}
