--- a/templates/tweet_candidates.html
+++ b/templates/tweet_candidates.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block title %} Email candidates {% endblock %}
-{% block body %}
+{% block wide %}
 
     <div id="tweet_candidates">
 
