--- a/templates/upload_cv.html
+++ b/templates/upload_cv.html
@@ -3,7 +3,7 @@
 {% block body %}
     <div id="upload_cv">
 
-        <h1>Hello, {{ candidate.name }}</h1>
+        <h1>Hello, {{ candidate.name }} <a class="not_me" href="/candidates">That’s not me</a></h1>
 
         <p class="lead">We'd love it if you would share your CV.</p>
         
