Wider sidebar in some widhts

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,12 +56,12 @@
       </div>
 
       <div class="row">
-        <div class="col-md-8 col-lg-7">
+        <div class="col-md-7">
             <div class="contentwrap"> {% block body %}{% endblock %} </div>
         </div>
-        <div class="col-md-1 col-lg-1">
+        <div class="col-md-1">
         </div>
-        <div class="col-md-3 col-lg-4">
+        <div class="col-md-4">
             <div class="sidebarwrap"> {% block sidebar %}{% endblock %} </div>
         </div>
       </div>
