Change headings in Google

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %} CVs of MPs {% endblock %}
+{% block title %} Curriculum Vitae of future Members of Parliament {% endblock %}
 {% block body %}
     <div id="front">
 
