--- a/templates/bumf.html
+++ b/templates/bumf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>{% block title %}{% endblock %} - Democracy Club CV</title>
+        <title>{% block title %}{% endblock %} - Democracy Club CVs</title>
 
         <meta name="description" content="Before you vote, look at their CVs! This site helps MP candidates share their CV with voters." />
         <meta name="twitter:card" value="summary">
