Show subscribe after tweeting

--- a/templates/tweet_candidates.html
+++ b/templates/tweet_candidates.html
@@ -20,7 +20,7 @@
         {% endfor %}
 
         <p>
-            <a href="/candidates" class="done-button btn btn-md btn-success">Done all</a>
+            <a href="/candidates?show_subscribe=1" class="done-button btn btn-md btn-success">Done all</a>
         </p>
 
    </div>
