--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -3,7 +3,7 @@
 
 {% block wide %}
 
-        {% if not email_got and from_email and not g.dismiss %}
+        {% if show_subscribe %}
 
             <div class="row"><div class="col-xs-6">
             <div class="panel panel-primary">
