--- a/templates/embed_cv.html
+++ b/templates/embed_cv.html
@@ -3,7 +3,7 @@
         <div class="frame_inner_wrapper">
             <img class="ratio" src="/static/transparent.gif"/>
             <iframe class="cvframe" src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&amp;embedded=true" frameborder="0" allowfullscreen></iframe>
-            <!-- CV uploaded: {{ cv.date }} -->
+            <!-- CV uploaded: {{ cv.last_modified }} -->
         </div>
     </div>
     {% if full_page_link %}
