--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -67,7 +67,7 @@
     <div id="show_cv">
 
         <iframe class="showcvframe" src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&amp;embedded=true" frameborder="0" allowfullscreen></iframe>
-        <!-- CV uploaded: {{ cv.date }} -->
+        <!-- CV uploaded: {{ cv.last_modified }} -->
 
    </div>
 
