Centralise all CVs page control; show 12 per page

--- a/templates/all_cvs.html
+++ b/templates/all_cvs.html
@@ -16,7 +16,7 @@
             {% endfor %}
         </div>
 
-        <nav>
+        <nav class="text-center">
           <ul class="pagination">
             {% if page == 1 %}
                 <li class="disabled"> <a href="#" aria-label="Previous"> <span aria-hidden="true">&laquo;</span> </a> </li>
