--- a/templates/embed_cv.html
+++ b/templates/embed_cv.html
@@ -1,18 +1,21 @@
 {% macro embed_cv(cv, full_page_link) %}
-    <div class="frame_outer_wrapper">
-        <div class="frame_inner_wrapper">
-            {% if cv.has_thumb %}
-                <img class="ratio" src="{{ cv.thumb.url }}" />
-            {% else %}
+    {% if cv.has_thumb %}
+        <a title="View full page" href="/show_cv/{{ cv.person_id }}">
+            <img class="ratio" src="{{ cv.thumb.url }}" />
+        </a>
+        <!-- CV uploaded: {{ cv.last_modified }} -->
+    {% else %}
+        <div class="frame_outer_wrapper">
+            <div class="frame_inner_wrapper">
                 <img class="ratio" src="/static/transparent.gif"/>
                 <iframe class="cvframe" src="http://docs.google.com/viewer?url={{ cv.url | urlencode}}&amp;embedded=true" frameborder="0" allowfullscreen></iframe>
-            {% endif %}
-            <!-- CV uploaded: {{ cv.last_modified }} -->
+                <!-- CV uploaded: {{ cv.last_modified }} -->
+            </div>
         </div>
-    </div>
-    {% if full_page_link %}
-    <div class="link_full_page"><a href="/show_cv/{{ cv.person_id }}">View full page</a></div>
+        {% if full_page_link %}
+            <div class="link_full_page"><a href="/show_cv/{{ cv.person_id }}">View full page</a></div>
+        {% endif %}
     {% endif %}
 {% endmacro %}
- 
+
 
