Update about page
It mentions you @andylolz - let me know if you're not OK with it!

--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
         <p>We believe it should also be the first step when people apply to become an MP.</p>
 
         <p>Voters can then look at the CVs, and assess skills and
-        abilities before choosing who is best.
+        background before choosing who is best.
         </p>
 
         <h2>What can I do here?</h2>
@@ -41,9 +41,9 @@
         <h2>What's the long term aim?</h2>
 
         <p>Ultimately, we'd like the public to be more involved in the
-        recruitment of MPs in lots of ways. Perhaps we can increase the
-        quality, giving Prime Ministers more choice of high calibre people for
-        senior roles.
+        recruitment of MPs in lots of ways. We're not going to prejudge
+        what they would like - it might be skills, background or just
+        the quality of the formatting.
         </p>
 
         <h2>Who's behind this site?</h2>
@@ -52,8 +52,11 @@
         back in 2010. He got it from his <a href="https://electionleaflets.org/">election leaflets project</a>.
         </p>
 
-        <p><a href="http://flourish.org/">Francis Irving</a> made the site.
-        He built a large part of the original TheyWorkForYou, back in the day.
+        <p><a href="http://flourish.org/">Francis Irving</a> made the site &mdash;
+        he <a href="http://www.flourish.org/2015/03/why-im-collecting-every-mp-candidates-cv/">explains why</a> 
+        on his blog. He built a large part of the original TheyWorkForYou,
+        back in the day. <a href="http://treadsoft.ly/">Andy Lulham</a> has contributed lots of 
+        code. And energy.
         </p>
 
         <p>
