--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,8 @@
         <p>Sending a CV is usually the very first step of a job application.
         </p>
 
-        <p>We believe it should also be the first step when people apply to become an MP.</p>
+        <p>We believe it should also be the first step when people apply to
+        become an MP.</p>
 
         <p>Voters can then look at the CVs, and assess skills and
         background before choosing who is best.
@@ -42,8 +43,7 @@
 
         <p>Ultimately, we'd like the public to be more involved in the
         recruitment of MPs in lots of ways. We're not going to prejudge
-        what they would like - it might be skills, background or just
-        the quality of the formatting.
+        what people are looking for - the CV is just the start.
         </p>
 
         <h2>Who's behind this site?</h2>
