--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,8 @@
 
         <h1>Before you vote, look at their CVs!</h1>
 
-        <p class="lead">This site helps MP candidates share their CV with voters.
-        </p>
-
+        <p class="lead">Invite your MP candidates to share their CVs.</p>
+        
         <p class="lead">
             Enter your postcode.
         </p>
