--- a/static/style.css
+++ b/static/style.css
@@ -62,42 +62,14 @@ footer ul.pull-right li:last-child {
 
 /* /candidates */
 
-.candidates > div {
-    margin-top: 48px;
+.candidates h2 {
+    margin-top: 32px;
 }
 
-.candidate_list {
-    margin-top: 20px;
-    margin-bottom: 20px;
+.party {
+    color: #bbb;
 }
 
-.no_email p {
-    margin-top: 10px;
-}
-
-.candidate_list a {
-    margin-right: 8px;
-}
-
-.candidate {
-    margin-top: 8px;
-}
-.candidate .name {
-    font-size: 20px;
-    margin-bottom: 6px;
-}
-.candidate .email_them {
-}
-
-.candidate .this_is_me {
-    margin-left: 0.5em;
-}
-
-@media (min-width: 768px) { 
-  #follow_constituency {
-    float: right;
-  }
-}
 
 /* /upload_cv */
 
