Ensure thumbs are never displayed too big

--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -116,7 +116,7 @@
 
            <div class="row">
                 {% for candidate in candidates_have_cv %}
-                    <div class="col-md-6 candidate">
+                    <div class="col-md-4 col-xs-6 candidate">
                         <div class="name">{{ candidate.name }}</span> &mdash; <span class="party">{{ candidate.party}}
                         </div>
                         {% import 'embed_cv.html' as embed_cv %}
