--- a/templates/tweet_candidates.html
+++ b/templates/tweet_candidates.html
@@ -10,7 +10,7 @@
 
         {% for candidate in candidates_no_cv %}
             {% if candidate.twitter %}
-                <h2>{{ candidate.name }}, {{ candidate.party }}</h2>
+               <h2>{{ candidate.name }} <span class="party">{{ candidate.party }}</span></h2>
                 <p>
                     <a class="btn btn-info btn-lg tweet" title=".@{{ candidate.twitter }} I'd love to see your CV before I vote, could you upload it here?" href="http://cv.democracyclub.org.uk/upload_cv/{{ candidate.id }}" data-hashtags="ge2015,mpcv" data-via="democlub" data-related="{{ candidate.twitter }}">
                         Tweet @{{ candidate.twitter }}
@@ -20,7 +20,7 @@
         {% endfor %}
 
         <p>
-            <a href="/candidates?show_subscribe=1" class="done-button btn btn-md btn-success">Done all</a>
+            <a href="/candidates?show_subscribe=1" class="done-button btn btn-lg btn-success">Done all</a>
         </p>
 
    </div>
