--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
 {% block body %}
     <div id="front">
 
-        <h1>Before you vote, look at their CVs!</h1>
+        <h1>Before you vote, help get their CVs!</h1>
 
-        <p class="lead">Invite your MP candidates to share their CVs.</p>
+        <p class="lead">Just like any job, MPs should have to submit a CV.</p>
         
         <p class="lead">
             Enter your postcode.
