--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
         <h1>Before you vote, help get their CVs!</h1>
 
-        <p class="lead">Just like any job, MPs should have to submit a CV.</p>
+        <p class="lead">We're collecting every MP candidate's CV.</p>
         
         <p class="lead">
             Enter your postcode.
